# bayesian-optimization

./: .gitignore  BayesianOptimizationLectureMIT.md  README.md  pyproject.toml
experiments/: common.py  fetch_archives.py  postprocess.py  run_bbob_bo.py  run_bbob_optuna.py  run_bbob_random.py
report/: README.md  main.tex  references.bib
src/bayesopt/: __init__.py  acq_optimize.py  acquisition.py  gaussian_process.py  kernels.py  optimizer.py  space.py  types.py
tests/: test_acq_optimize.py  test_acquisition.py  test_gaussian_process.py  test_kernels.py  test_optimizer_loop.py
visualizations/: plot_bo_run_4x2.py  plot_explore_exploit_dilemma.py  plot_gp_1d_posterior.py  plot_gp_i_ei.py  plot_kernels_2d_triptych.py  style.py
